--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -25,8 +25,9 @@
 <%= link_to 'Edit', edit_brewery_path(@brewery) %> |
 <%= link_to 'Back', :back %>
 
-<div id="itemlist">
+<div class="itemlist">
 <table>
+<thead>
   <tr>
     <th width=200>Beer</th>
 	<th width=200>Bar</th>
@@ -34,6 +35,8 @@
     <th></th>
     <th></th>
   </tr>
+</thead>
+<tbody>
 <% @beers.each do |beer| %>
 <tr>
 <% beer.beer_items.each do |item| %>
@@ -44,10 +47,14 @@
     <% if item.bar.has_permission?(current_user) %>
       <td><%= link_to 'Edit', edit_beer_item_path(item) %></td>
       <td><%= link_to 'Destroy', item, :confirm => 'Are you sure?', :method => :delete %></td>
+    <% else %>
+    	<td />
+    	<td />
     <% end %>
   </tr>
 <% end %>
 </tr>
 <% end %>
+</tbody>
 </table>
 </div>
