--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,12 @@
   <script type="text/javascript" src="javascripts/prototype.js"</script> -->
   <%= stylesheet_link_tag "application.css" %>
   <%= javascript_include_tag :defaults %>
+  <script type="text/javascript" src="/javascripts/jquery-1.6.2.min.js"></script>
+  <script type="text/javascript" src="/javascripts/jquery.color.js"></script>
+  <script type="text/javascript" src="/javascripts/jquery-ui-1.8.15.custom.min.js"></script>
+  <script type="text/javascript" src="/javascripts/jquery.easing.js"></script>
+  <script type='text/javascript' src='/javascripts/script.js'></script>
+  <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/ui-lightness/jquery-ui-1.8.15.custom.css">
   <%= csrf_meta_tag %>
 </head>
 <body>
@@ -42,6 +48,8 @@
 			Using an iPhone? <a href="http://iphone.atlbeerlist.com/">Use the optimised version</a>.
 		</div>
 	<% end %>
+	
+	<p id="no-script">In order to experience all of the great features of this site, you will need a browser that supports JavaScript.  Learn how to enable it for your browser <a href="http://www.google.com/support/bin/answer.py?answer=23852&hl=en">here</a>.</p>
 
     <%= content_tag(:p, notice, :class => 'notice') if notice.present? %>
     <%= content_tag(:p, alert, :class => 'alert') if alert.present? %>
