--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -11,7 +11,9 @@ body, p, ol, ul, td {
   font-family: verdana, arial, helvetica, sans-serif;
   font-size:   13px;
   line-height: 18px;
+  margin: 0px;
 }
+
 
 pre {
   background-color: #eee;
@@ -55,13 +57,22 @@ a:hover {
   font-size: 10px;
 }
 
-#itemlist {
+.greenLine {
   border-top: 5px solid #556B2F;
-  margin-top: 10px;
+  padding: 5px;
+}
+
+.itemlist {
+  /* border-top: 5px solid #556B2F; */
   clear:both;
-  padding: 10px 0;
+  /* margin-top: 10px; */
+  padding: 5px 0;
   text-align: left;
   font-size: 11px;
+}
+
+.itemlist h2 {
+  padding: 10px 0;
 }
 
 #footer {
@@ -114,15 +125,16 @@ a:hover {
   margin-bottom: 12px;
 }
 
-#main table{
+#main table, td {
   margin: 0;
+  border-collapse: collapse;
 }
 
-#main form{
+#main form {
   text-align: left;
 }
 
-#main form br{
+#main form br {
   display: none;
   float: left;
 }
@@ -258,4 +270,25 @@ a:hover {
   text-align: center;
   padding: 25px 50px;
   font-size: 20px;
+}
+
+.zebra { 
+  background-color: #dddddd;
+  margin: 0px;
+}
+
+#no-script {
+  text-align: center;
+  color: red;
+  background-color: #E8E8E8;
+}
+
+#disclaimer {
+  color: blue;
+  background-color: #E8E8E8;
+}
+
+.brew-desc {
+  padding-left: 20px;
+  background-color: #E8E8E8;
 }
