--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,10 @@
   <%= stylesheet_link_tag "application.css" %>
   <%= javascript_include_tag :defaults %>
   <script type="text/javascript" src="/javascripts/jquery-1.6.2.min.js"></script>
-  <script type="text/javascript" src="/javascripts/jquery.color.js"></script>
+  <!-- <script type="text/javascript" src="/javascripts/jquery.color.js"></script> -->
   <script type="text/javascript" src="/javascripts/jquery-ui-1.8.15.custom.min.js"></script>
-  <script type="text/javascript" src="/javascripts/jquery.easing.js"></script>
+  <!-- <script type="text/javascript" src="/javascripts/jquery.easing.js"></script> -->
+  <script type='text/javascript' src='/javascripts/jExpand.js'></script>
   <script type='text/javascript' src='/javascripts/script.js'></script>
   <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/ui-lightness/jquery-ui-1.8.15.custom.css">
   <%= csrf_meta_tag %>
