--- a/app/views/beer_items/_form.html.erb
+++ b/app/views/beer_items/_form.html.erb
@@ -14,11 +14,22 @@
      <%= f.label :name %><br />
      <%= collection_select :beer_item, :bar_id, current_user.admin_bars, :id, :name %><br />
   </div>
+  
+  <div class="field">
+    <%= f.label :volume %><br />
+    <%= f.text_field :volume %> <%= select :beer_item, :volunit, options_for_select([["oz","oz"],["ml","ml"],["cl","cl"]],@beer_item.volunit)%>
+  </div>
+  
+  <div class="field">
+    <%= f.label :pouring %><br />
+    <%= select :beer_item, :pouring, options_for_select([["draught","draught"],["bottle","bottle"],["can","can"],["cask pour","cask pour"]], @beer_item.pouring)%>
+  </div>
 
   <div class="field">
     <%= f.label :price %><br />
     <%= f.text_field :price %>
   </div>
+  
   <div class="actions">
     <%= submit_or_cancel(f) %>
   </div>
