--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -18,13 +18,6 @@
   <%= number_to_percentage @beer.abv, :precision => 1 %> 
 </p>
 
-<p>
-  <b>Volume:</b>
-  <%= @beer.volume %> 
-	<% if not @beer.volume.nil? %>
-		<%= @beer.volunit %>
-	<% end %>
-</p>
 
 <div class="itemlist">
 <table>
@@ -33,8 +26,8 @@
     <th width=150>Bar</th>
 	<th width=150>Address</th>
     <th width=100>Price</th>
+    <td width=150>Pouring</th>
 	<th width=100>ABD (oz)</th>
-    <th></th>
     <th></th>
     <th></th>
   </tr>
@@ -45,21 +38,31 @@
     <td><%= link_to item.bar.name, item.bar %></td>
 	<td><%= item.bar.address %></td>
     <td><%= number_to_currency(item.price) %></td>
-   <% if not item.beer.abv.nil? %>
-	<% case @beer.volunit %>
+   <% unless (item.volume.nil? || item.pouring.nil?) %>
+    <td><%= number_to_human(item.volume, :units => {:unit => item.volunit}) %> <%= item.pouring %></td>
+   <% else %>
+   	<td><%= item.pouring %></td>
+   <% end %>
+   
+   <% unless (item.beer.abv.nil? || item.volume.nil? || item.price.nil?) %>
+	<% case item.volunit %>
 	<% when 'oz' %>
-		<td><%= sprintf("%.3f",(@beer.abv*@beer.volume)/(100*item.price)) %> </td>
+		<td><%= sprintf("%.3f",(@beer.abv*item.volume)/(100*item.price)) %> </td>
 	<% when 'ml' %>
-		<td><%= sprintf("%.3f",(@beer.abv*@beer.volume*0.03381)/(100*item.price)) %> </td>
+		<td><%= sprintf("%.3f",(@beer.abv*item.volume*0.03381)/(100*item.price)) %> </td>
 	<% when 'cl' %>
-		<td><%= sprintf("%.3f",(@beer.abv*@beer.volume*0.3381)/(100*item.price)) %> </td>
+		<td><%= sprintf("%.3f",(@beer.abv*item.volume*0.3381)/(100*item.price)) %> </td>
 	<% end %>
    <% else %>
 	<td></td>
    <% end %>
-    <td><%= link_to 'Show', item %></td>
+   <% if item.bar.has_permission?(current_user) %>
     <td><%= link_to 'Edit', edit_beer_item_path(item) %></td>
     <td><%= link_to 'Destroy', item, :confirm => 'Are you sure?', :method => :delete %></td>
+   <% else %>
+    <td />
+    <td />
+   <% end %>
   </tr>
 <% end %>
 </tbody>
