added sorting to front page.  added charts to bar_manager page.

--- a/app/views/bar_owner/show.slim
+++ b/app/views/bar_owner/show.slim
@@ -1,22 +1,21 @@
 br
-h2 You're in charge:
+h2 You're in charge of
 br
 
-table.itemlist
+table.chart_list
 	thead
 		tr
 			th
-			th Number of Followers
-			th New Followers in the past month
+			th
+			th
 	tbody
 	- @bars.each do |f|
 		tr
 			td = link_to f.name, edit_bar_path(f.id)
-			td = f.followers_emails.count
-			td = f.recent_followers.count
+			td = "#{number_to_human(f.followers_emails.count)} followers"
+			td = "#{number_to_human(f.recent_followers.count)} new followers in the past month"
+			td
+				div.arrow
 		tr
-			td colspan="3"
-				p 
-				  div id="chartdiv_#{f.id}" style="height:400px;width:700px;"
-				script
-				  | $.jqplot('chartdiv_#{f.id}',  #{{f.followers_histogram_data.to_json}} );
+			td colspan="4"
+				div id="chartdiv_#{f.id}" class="chart {chartdata: #{f.followers_data}}" style="height:400px;width:700px;"
