--- a/app/views/beer_items/index.html.erb
+++ b/app/views/beer_items/index.html.erb
@@ -13,8 +13,8 @@ You've stumbled on the best thing to happen to the Atlanta beer scene since Bric
   <tr>
     <th width=200>Beer</th>
     <th width=200>Bar</th>
-    <th width=150>Pouring</th>
-    <th width=100>Price</th>
+    <th width=150><%= sortable "volume", "Pouring" %></th>
+    <th width=100><%= sortable "price" %></th>
     <th width=50></th>
     <th width=50></th>
     <th width=50></th>
