--- a/app/views/breweries/index.html.erb
+++ b/app/views/breweries/index.html.erb
@@ -34,7 +34,7 @@
   </tr>
   <tr>
   	<td colspan="4" id="itemdesc-<%= brewery.id %>" class="itemdesc">
-  		<p></p>
+  		<div></div>
   	</td>
   </tr>
 <% end %>
