--- a/app/views/bars/_list.html.erb
+++ b/app/views/bars/_list.html.erb
@@ -1,7 +1,7 @@
 <% if logged_in? %>
 <% unless current_user.bars.empty? %> 
 
-<!-- FIOLLOWED BARS -->
+<!-- FOLLOWED BARS -->
 <h2 id="followingBars-toggleButton">Following</h2>
 <table id="expanding_followed_bars_list" class="expandable_itemlist">
  <thead>
@@ -50,7 +50,7 @@
   </tr>
   <tr>
   	<td colspan="6" id="itemdesc-<%= f.id %>" class="itemdesc">
-  		<p></p>
+  		<div></div>
   	</td>
   </tr>
 <% end %>
@@ -114,7 +114,7 @@
   </tr>
   <tr>
   	<td colspan="6" id="itemdesc-<%= f.id %>" class="itemdesc">
-  		<p></p>
+  		<div></div>
   	</td>
   </tr>
 <% end %>
