--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,19 +2,16 @@
 <html>
 <head>
   <title>Atlanta Beer List</title>
-  <!-- <link rel="stylesheet" type="text/css" media="screen" href="stylsheets/application.css"></style>
-  <script type="text/javascript" src="javascripts/rails.js"</script>
-  <script type="text/javascript" src="javascripts/prototype.js"</script> -->
+
   <%= stylesheet_link_tag "application.css", "jquery.jqplot.min.css", "ui-lightness/jquery-ui-1.8.15.custom.css" %>
   <%= javascript_include_tag :defaults %>
-  <script type="text/javascript" src="/javascripts/jquery-1.6.2.min.js"></script>
-  <script type='text/javascript' src='/javascripts/script.js'></script>
-  <script type="text/javascript" src="/javascripts/jquery-ui-1.8.15.custom.min.js"></script>
-  <script type="text/javascript" src="/javascripts/jquery.jqplot.min.js"></script>
-  <script type="text/javascript" src="/javascripts/jqplot_plugins/jqplot.dateAxisRenderer.min.js"></script>
-  <script type='text/javascript' src='/javascripts/jExpand.js'></script>
-  
-  <!-- <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/ui-lightness/jquery-ui-1.8.15.custom.css"> -->
+  <%= javascript_include_tag "application", "/javascripts/jquery-1.6.2.min.js" %>
+  <%= javascript_include_tag "application", "/javascripts/coffeescripts/script.js" %>
+  <%= javascript_include_tag "application", "/javascripts/jquery-ui-1.8.15.custom.min.js" %>
+  <%= javascript_include_tag "application", "/javascripts/jquery.jqplot.js" %>
+  <%= javascript_include_tag "application", "/javascripts/jqplot_plugins/jqplot.dateAxisRenderer.min.js" %>
+  <%= javascript_include_tag "application", "/javascripts/jExpand.js" %>
+  <%= javascript_include_tag "application", "/javascripts/jquery.metadata.js"%>
   <%= csrf_meta_tag %>
   <%= yield :head %>
 </head>
@@ -24,35 +21,31 @@
    <h1><%= link_to "ABL", root_path %><span id="beta">beta</span> </h1>
     <div id="user_bar">
      <ul>
-      <% if logged_in? %>
 		<li><%= link_to "Beers", beers_path %></li>
-		<li>|</li>
+		<li>-</li>
 		<li><%= link_to "Bars", bars_path %></li>
-		<li>|</li>
+		<li>-</li>
 		<li><%= link_to "Breweries", breweries_path %></li>
 		<li>|</li>
-	   <% unless current_user.admin_bars.empty? %>        
+      <% if logged_in? %>	
+	   	<% unless current_user.admin_bars.empty? %>      
 			<li><%= link_to "New Item", new_beer_item_path %></li>
 			<li>|</li>
-	   <% end %>
-        <li><%= link_to "Edit Password", edit_user_path(current_user) %></li>
-        <li>|</li>
-        <li><%= link_to "Logout", logout_path %></li>
-      <% else %>  
-		<li><%= link_to "Beers", beers_path %></li>
-		<li>|</li>
-		<li><%= link_to "Bars", bars_path %></li>
-		<li>|</li>
-		<li><%= link_to "Breweries", breweries_path %></li>
-		<li>|</li>
-	  <% if signup_allowed? %>
-		<li><%= link_to "Signup", new_user_path %></li>
-		<li>|</li>
-	  <% else %>
-	    <li>Beta Testing Full</li>
-	    <li>|</li>
-	  <% end %>
-        <li><%= link_to "Login", login_path %></li>
+			<li><%= link_to "Manage Bars", bar_owner_path %></li>
+			<li>|</li>
+		 <% end %>
+	        <li><%= link_to "Edit Password", edit_user_path(current_user) %></li>
+	        <li>|</li>
+	        <li><%= link_to "Logout", logout_path %></li>
+      <% else %>
+		 <% if signup_allowed? %>
+			<li><%= link_to "Signup", new_user_path %></li>
+			<li>|</li>
+		   <% else %>
+			<li>Beta Testing Full</li>
+			<li>|</li>
+		 <% end %>
+         <li><%= link_to "Login", login_path %></li>
       <% end %>
      </ul>
     </div>
