--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -20,6 +20,6 @@
        <%= f.password_field :password_confirmation %>
     </div>
     <div class="actions">
-      <%= submit_or_cancel(f) %>
+      <%= submit_or_cancel f, "Signup" %>
     </div>
    <% end %>
