--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,20 @@
   <%= javascript_include_tag "application", "/javascripts/jqplot_plugins/jqplot.dateAxisRenderer.min.js" %>
   <%= javascript_include_tag "application", "/javascripts/jquery.metadata.js"%>
   <%= csrf_meta_tag %>
+	<script type="text/javascript">
+
+	  var _gaq = _gaq || [];
+	  _gaq.push(['_setAccount', 'UA-25428237-1']);
+	  _gaq.push(['_trackPageview']);
+
+	  (function() {
+	    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+	    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+	    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+	  })();
+
+	</script>
+
   <%= yield :head %>
 </head>
 <body>
