--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -7,8 +7,8 @@
     <th width=150>Name</th>
 	<th width=250>Brewery</th>
     <th width=120>Pouring at . . .</th>
-    <th width=60></th>
-    <th width=60></th>
+    <th width=50></th>
+    <th width=50></th>
   </tr>
 </thead>
 <tbody>
@@ -17,12 +17,8 @@
     <td><%= link_to beer.name, beer %></td>
 	<td><%= link_to beer.brewery.name, beer.brewery %></td>
     <td><%= beer.bars.count %> bars</td>
-    <td><%= link_to 'Edit', edit_beer_path(beer) %></td>
-    <% if logged_in? && current_user.id == 1 %>
-    	<td><%= link_to 'Destroy', beer, :confirm => 'Are you sure?', :method => :delete %></td>
-    <% else %>
-    	<td />
-    <% end %>
+	<td><%= link_to 'Details', beer, :class => 'action_link' %>
+    <td><%= link_to 'Edit', edit_beer_path(beer), :class => 'action_link'  %></td>
   </tr>
 <% end %>
 </tbody>
