--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,11 +6,11 @@
   <%= stylesheet_link_tag "application.css", "jquery.jqplot.min.css", "ui-lightness/jquery-ui-1.8.15.custom.css" %>
   <%= javascript_include_tag :defaults %>
   <%= javascript_include_tag "application", "/javascripts/jquery-1.6.2.min.js" %>
-  <%= javascript_include_tag "application", "/javascripts/coffeescripts/script.js" %>
-  <%= javascript_include_tag "application", "/javascripts/jquery-ui-1.8.16.custom.min.js" %>
-  <%= javascript_include_tag "application", "/javascripts/jquery.jqplot.js" %>
-  <%= javascript_include_tag "application", "/javascripts/jqplot_plugins/jqplot.dateAxisRenderer.min.js" %>
-  <%= javascript_include_tag "application", "/javascripts/jquery.metadata.js"%>
+  <%= javascript_include_tag "/javascripts/coffeescripts/script.js" %>
+  <%= javascript_include_tag "/javascripts/jquery-ui-1.8.16.custom.min.js" %>
+  <%= javascript_include_tag "/javascripts/jquery.jqplot.js" %>
+  <%= javascript_include_tag "/javascripts/jqplot_plugins/jqplot.dateAxisRenderer.min.js" %>
+  <%= javascript_include_tag "/javascripts/jquery.metadata.js"%>
   <%= csrf_meta_tag %>
 	<script type="text/javascript">
 
@@ -42,8 +42,6 @@
 		<li>|</li>
       <% if logged_in? %>	
 	   	<% unless current_user.admin_bars.empty? %>      
-			<li><%= link_to "New Item", new_beer_item_path %></li>
-			<li>|</li>
 			<li><%= link_to "Manage Bars", bar_owner_path %></li>
 			<li>|</li>
 		 <% end %>
@@ -66,11 +64,11 @@
   <div id="main">
   	<% if iphone_user_agent? %>
   		<div id="message">
-			Using an iPhone? <a href="http://iphone.atlbeerlist.com/">Use the optimised version</a>.
+			Using an iPhone? <a href="http://iphone.atlbeerlist.com/">Use the optimized version</a>.
 		</div>
 	<% end %>
 
-    <%= content_tag(:p, notice, :class => 'notice') if notice.present? %>
+    <%= content_tag(:p, raw(notice), :class => 'notice') if notice.present? %>
     <%= content_tag(:p, alert, :class => 'alert') if alert.present? %>
 
     <%= yield %>
